MAIN COMMITS
------------
2/8 -> "Initial commit" -> Creación del repositorio
2/8 -> "Initial commit" -> Creación del proyecto
2/8 -> "#1 Commit readme changes" -> Creación del readme
2/8 -> "#1 Folder structure" -> Creación de la estructura
2/8 -> "#2 Folder structure" -> Modificacion de arhivos y directorios
2/9 -> "#3 Folder structure" -> Modificacion de arhivos en los directorios
2/9 -> "#1 Components - template shop" -> Desarrollo de componentes
2/9 -> "#2 Components - main, foot, navbar" -> Desarrollo de componentes
2/11 -> "#3 Components - all components" -> Desarrollo de componentes
2/12 -> "#4 Components - all components" -> Desarrollo de componentes
2/12 -> "#5 Components - all components" -> Desarrollo de componentes
2/12 -> "#6 Components - all components" -> Desarrollo de componentes

CONTROL COMMITS
---------------
2/8 -> "#1 Control commit inicial" -> Creación del changes.txt
2/9 -> "#1 Folder structure" -> Creación de structure.txt
2/9 -> "#1 Readme modify" -> Modificacion del readme
2/14 -> "#1 GH Pages deploy" -> GH pages deploy

ISSUES COMMITS
--------------
2/9 -> "Delete .vite directory" -> Vite creo archivos random