@@ -1,6 +1,6 @@
 @font-face {
 font-family: 'Inter';
-src: url("../assets/fonts/Inter-font.ttf") format('opentype');
+src: url("/assets/fonts/Inter-font.ttf") format('opentype');
 } 
 
 section{
