@@ -23,3 +23,4 @@ CONTROL COMMITS
 ISSUES COMMITS
 --------------
 2/9 -> "Delete .vite directory" -> Vite creo archivos random
+2/14 -> "Assets path modify" -> Bug de enrutamiento de activos o recursos
